--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,11 +7,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <% if user_signed_in? %>
           <li><%= link_to "Home", root_path, class: 'dropdown-item' %></li>
-          <% else %>
-          <li><%= link_to "Home", new_user_session_path, class: 'dropdown-item' %></li>
-            <% end %>
+
           </li>
       </ul>
       <!-- Move the dropdown to the right -->
@@ -20,7 +17,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Account
           </a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+          <ul class="dropdown-menu dropdown-menu-lg-end" aria-labelledby="navbarDropdown">
             <% if user_signed_in? %>
               <li><%= link_to "Edit Profile", edit_user_registration_path, class: 'dropdown-item' %></li>
               <li><%= button_to "Log Out", destroy_user_session_path, method: :delete, class: 'dropdown-item' %></li>
