--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -1,22 +1,15 @@
 div id="#{dom_id post}"
   p
-    strong Active:
-    =< post.active
-    
-  p
-    strong Featured:
-    =< post.featured
-
-  p
     strong Title:
-    =< post.title
-    
+    = post.title
+  p
+    strong Posted by: 
+    = post.user.email
+  p
+    h6 = pluralize(post.views, "view")
   p
     strong Publish date:
-    =< post.publish_date.strftime("%B %d, %Y")
-
-    
+    = post.publish_date.strftime("%B %d, %Y")
   p
     strong Body:
-    =< post.body
-
+    = post.body
