--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -5,6 +5,8 @@ p style="color: green" = notice
 div
   => link_to "Edit this post", edit_post_path(@post)
   '|
-  =< link_to "Back to posts", posts_path
+  =< link_to "Back to posts ", posts_path
+  '|
+  =< link_to "Back to feed", feed_path
 
   = button_to "Destroy this post", @post, method: :delete
