--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,28 +6,39 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <!-- Home Link -->
         <li class="nav-item">
-          <li><%= link_to "Home", root_path, class: 'dropdown-item' %></li>
-
-          </li>
-      </ul>
-      <!-- Move the dropdown to the right -->
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Account
-          </a>
-          <ul class="dropdown-menu dropdown-menu-lg-end" aria-labelledby="navbarDropdown">
-            <% if user_signed_in? %>
-              <li><%= link_to "Edit Profile", edit_user_registration_path, class: 'dropdown-item' %></li>
-              <li><%= button_to "Log Out", destroy_user_session_path, method: :delete, class: 'dropdown-item' %></li>
-            <% else %>
-              <li><%= link_to "Sign Up", new_user_registration_path, class: 'dropdown-item' %></li>
-              <li><%= link_to "Log In", new_user_session_path, class: 'dropdown-item' %></li>
-            <% end %>
-          </ul>
+          <%= link_to "Home", root_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Your Posts", posts_path, class: 'nav-link' %>
         </li>
       </ul>
+      
+      <div class="d-flex align-items-center">
+        <% if user_signed_in? %>
+          <span class="navbar-text me-2">
+            <%= current_user.first_name %> <%= current_user.last_name %>
+          </span>
+        <% end %>
+        
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Account
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <% if user_signed_in? %>
+                <li><%= link_to "Edit Profile", edit_user_registration_path, class: 'dropdown-item' %></li>
+                <li><%= button_to "Log Out", destroy_user_session_path, method: :delete, class: 'dropdown-item' %></li>
+              <% else %>
+                <li><%= link_to "Sign Up", new_user_registration_path, class: 'dropdown-item' %></li>
+                <li><%= link_to "Log In", new_user_session_path, class: 'dropdown-item' %></li>
+              <% end %>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
