--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,27 +11,27 @@
           <%= link_to "Home", root_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
+        <% if user_signed_in? %>
           <%= link_to "Your Posts", posts_path, class: 'nav-link' %>
+        <% end %>
         </li>
       </ul>
-      
-      <div class="d-flex align-items-center">
-        <% if user_signed_in? %>
-          <span class="navbar-text me-2">
-            <%= current_user.first_name %> <%= current_user.last_name %>
-          </span>
-        <% end %>
+    
         
         <ul class="navbar-nav mb-2 mb-lg-0">
           <li class="nav-item dropdown">
+              <% if user_signed_in? %>
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Account
+            <%= current_user.full_name %> 
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <% if user_signed_in? %>
                 <li><%= link_to "Edit Profile", edit_user_registration_path, class: 'dropdown-item' %></li>
-                <li><%= button_to "Log Out", destroy_user_session_path, method: :delete, class: 'dropdown-item' %></li>
+                <li><%= button_to "Log Out", destroy_user_session_path, method: :delete, class: 'dropdown-item' %></li>              
               <% else %>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Log in
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                 <li><%= link_to "Sign Up", new_user_registration_path, class: 'dropdown-item' %></li>
                 <li><%= link_to "Log In", new_user_session_path, class: 'dropdown-item' %></li>
               <% end %>
