--- a/app/views/posts/_feed_post.html.slim
+++ b/app/views/posts/_feed_post.html.slim
@@ -3,7 +3,7 @@
     strong Title:
     span.title = post.title
   p
-    h7 = post.user.email
+    h7 = post.user.full_name
   p
     h6 = pluralize(post.views, "view")
 
@@ -14,4 +14,4 @@
   p
     span.body = post.body
 
-  = link_to "Show this post", post
+  = link_to "Show this post", post, class: 'btn btn-info'
