--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,11 +1,25 @@
-p style="color: green" = notice
-
 h1 Posts
 
-#posts
-  - @posts.each do |post|
-    == render post
-    p.test#post
-      = link_to "Show this post", post
+= button_to "New Post", new_post_path, method: :get, class: 'btn btn-primary'
 
-= link_to "New post", new_post_path
+|
+
+#filter-form
+  = form_with(url: posts_path, method: :get, data: { turbo_frame: 'posts' }) do |form|
+    .mb-3
+      = form.label :title, "Search by title:"
+      = form.text_field :title, class: 'form-control'
+
+    .mb-3
+      = form.label :publish_date, "Filter by date:"
+      = form.date_field :publish_date, class: 'form-control'
+
+    = form.submit "Filter", class: 'btn btn-primary'
+
+#posts
+  = turbo_frame_tag 'posts' do
+    - @posts.each do |post|
+      .container-post
+        == render post
+        div.test#post
+          = link_to "Show this post", post, class: 'btn btn-info', data: { turbo: 'false' }
