--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,12 +1,22 @@
-p style="color: green" = notice
+= turbo_frame_tag "post_#{@post.id}" do
+  h4 = @post.title
 
-== render @post
+  p
+    strong Posted by: 
+    = @post.user.full_name
 
-div
-  => link_to "Edit this post", edit_post_path(@post)
-  '|
-  =< link_to "Back to posts ", posts_path
-  '|
-  =< link_to "Back to feed", feed_path
+  p
+    strong Published: 
+    = @post.publish_date.strftime("%B %d, %Y")
 
-  = button_to "Destroy this post", @post, method: :delete
+  p 
+    = @post.body
+
+  - if user_signed_in? && current_user.id == @post.user_id
+    = link_to "Edit this post", edit_post_path(@post), class: 'btn btn-warning', data: { turbo: 'false' }
+    = button_to "Destroy this post", @post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
+
+  div
+    = link_to "Back to posts ", posts_path, data: { turbo: 'false' }
+    ' | 
+    = link_to "Back to feed", feed_path, data: { turbo: 'false' }
