--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <%= link_to "Digiteer Rails", root_path, class: 'navbar-brand' %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <% if user_signed_in? %>
+    <%= link_to " Digiteer Rails", root_path, class: 'nav-link' %>
+    <% elsif admin_signed_in? %>
+    <%= link_to "Digiteer Admin", admin_dashboard_path, class: 'nav-link' %>
+    <% else %>
+    <%= link_to "Practice E-Commerce", root_path, class: 'navbar-brand' %>
+    <% end %>    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -19,24 +24,34 @@
       </ul>
     
         
-        <ul class="navbar-nav mb-2 mb-lg-0">
-          <li class="nav-item dropdown">
-              <% if user_signed_in? %>
+      <ul class="navbar-nav mb-2 mb-lg-0">
+        <li class="nav-item dropdown">
+          <% if user_signed_in? %>
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <%= current_user.full_name %> 
+              <%= current_user.full_name %>
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <li><%= link_to "Edit Profile", edit_user_registration_path, class: 'dropdown-item' %></li>
-                <li><%= button_to "Log Out", destroy_user_session_path, method: :delete, class: 'dropdown-item' %></li>              
-              <% else %>
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Log in
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <li><%= link_to "Sign Up", new_user_registration_path, class: 'dropdown-item' %></li>
-                <li><%= link_to "Log In", new_user_session_path, class: 'dropdown-item' %></li>
-              <% end %>
+              <li><%= link_to "Edit Profile", edit_user_registration_path, class: 'dropdown-item' %></li>
+              <li><%= button_to "Log Out", destroy_user_session_path, method: :delete, class: 'dropdown-item' %></li>
             </ul>
+          <% elsif  admin_signed_in?%>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <%= current_admin.full_name %>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+            <li><%= link_to "Edit Profile", edit_admin_registration_path, class: 'dropdown-item' %></li>
+            <li><%= button_to "Log Out", destroy_admin_session_path, method: :delete, class: 'dropdown-item' %></li>
+          </ul>
+          <% else %>
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Log in 
+        </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <li><%= link_to "Sign Up", new_user_registration_path, class: 'dropdown-item' %></li>
+              <li><%= link_to "Log In", new_user_session_path, class: 'dropdown-item' %></li>
+            </ul>
+          <% end %>
+        </li>
           </li>
         </ul>
       </div>
